# osia-reference-implementation

./: LICENSE  README.md  README.rst  dashboard.yaml  docker-compose.yml
cr-mock/: cr_birth.py  insert_data.py
custo/: pr.yaml
notification/: Dockerfile  README.md  requirements.txt  setup.cfg  supervisord.conf  tox.ini
notification/src/notification/: __init__.py  __main__.py  celery.py  notification.py  tasks.py
notification/tests/: __init__.py  test_cmdline.py  test_monitoring.py  test_notification.py
orchestrator/: .coveragerc  Dockerfile  requirements.txt  setup.cfg  supervisord.conf  tox.ini
orchestrator/src/orchestrator/: __main__.py  celery.py  orchestrator.py  tasks.py
orchestrator/src/orchestrator/clients/: cr.py  pr.py
orchestrator/tests/: __init__.py  test_cmdline.py  test_monitoring.py  test_orchestrator.py
pr/: Dockerfile  README.rst  docker-compose-postgres.yml  requirements.txt  setup.cfg  tox.ini
pr-mock/: Dockerfile  README.rst  setup.cfg  tox.ini
pr-mock/src/pr/: __main__.py  pr.py
pr-mock/tests/: __init__.py  test_birthuc.py  test_cmdline.py  test_dataaccess.py  test_monitoring.py  test_pr.py
pr-portal/: Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
pr-portal/src/pr/portal/: __init__.py  apps.py  surname.txt  urls.py  views.py
pr-portal/src/pr/portal/static/pr/portal/: style.css
pr-portal/src/pr/portal/templates/pr/portal/: base.html  index.html  person.html
pr-portal/src/pr/portal/templatetags/: pr_portal.py
pr/src/pr/: __init__.py  __main__.py  model.py  serialize.py  server.py
pr/tests/: __init__.py  custo.yaml  inject.py  test_dataaccess.py  test_model.py  test_monitoring.py  test_server.py
pr/tests/alphadata/: firstnameF.txt  firstnameM.txt  lastname.txt
uin/: Dockerfile  Dockerfile.min2  Dockerfile.min3  requirements.txt  setup.cfg  tox.ini
uin/src/uin/: __main__.py  uin.py
uin/tests/: __init__.py  test_cmdline.py  test_monitoring.py  test_uin.py
