
[metadata]
name = notification
version = attr: notification.__version__
author = Olivier Heurtier
author_email = olivier.heurtier@secureidentityalliance.org
license = MIT
description = notification
long_description = file: README.md
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
test_suite = 
    tests
install_requires =
    configargparse
    aiohttp
    livemetrics[aiohttp]

    python_dateutil
    redis
    #hiredis == 1.0.0
    celery[redis]
    requests

package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    comprobante = notification.__main__:main

