
[metadata]
name = pr.portal
version = attr: pr.portal.__version__
author = Olivier Heurtier
author_email = olivier.heurtier@secureidentityalliance.org
license = MIT
description = Population Registry Portal
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
include_package_data = true
packages=find:
package_dir=
    =src
python_requires = >=3.8
install_requires =
    Django >= 4.2
    requests
    django-bootstrap-v5

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    APP = APP.__main__:main

