
[metadata]
name = pr
version = attr: pr.__version__
author = Olivier Heurtier
author_email = olivier.heurtier@secureidentityalliance.org
license = MIT
description = pr
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
test_suite = 
    tests
install_requires =
    configargparse
    aiohttp
    livemetrics[aiohttp]
    sqlalchemy
    marshmallow-sqlalchemy
    pyyaml
    jsonschema
    referencing
    aiosqlite
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    pr_mock = pr.__main__:main

