
[metadata]
name = uin
version = attr: uin.__version__
author = Olivier Heurtier
author_email = olivier.heurtier@secureidentityalliance.org
license = MIT
description = uin
long_description = file: README.md
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
test_suite = 
    tests
install_requires =
    configargparse
    aiohttp
    livemetrics[aiohttp]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    uin = uin.__main__:main

